# trim_utf8

./: Makefile.am  Makefile.in  configure  configure.in  trim_utf8.c
lib/: Makefile.am  Makefile.in  trim_utf8.h
phpext/: CREDITS  Makefile.am  Makefile.in  config.m4  config.w32  run-tests.php  trim_utf8.c
phpext/tu8/: config.m4  php_trim_utf8.h  trim_utf8.php
