#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([trim_utf8], [0.0.1], [home.yappy.269@gmail.com])
AM_INIT_AUTOMAKE(foreign 1.11.0)
AC_CONFIG_SRCDIR([lib/trim_utf8.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 phpext/Makefile])
AC_OUTPUT
